syntax = "proto3";

option go_package = ".;loaderbot";

package loaderbot;

service Loader {
    rpc Run (RunConfigRequest) returns (stream ResultsResponse) {
    }
}

message RunConfigRequest {
    bytes config = 1;
    string attackerName = 2;
}

message ResultsResponse {
    bytes resultsChunk = 1;
}